bonus/gitlab_repo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: dev
spec:
  ports:
    - protocol: TCP
      port: 8888
  selector:
    app: dev-app
